2017-12-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove a webkitgtk workaround

	* src/main.c (main): do not set the
	WEBKIT_DISABLE_COMPOSITING_MODE environment variable to "1"--it
	doesn't seem to be needed any more.

2017-12-03  Albrecht Dreß <albrecht.dress@arcor.de>

	Fix documentation

	* README: remove description of two configure options (--with-gpg-app,
	--enable-smime) that have gone away.

2017-12-02  Albrecht Dreß <albrecht.dress@arcor.de>

	Expand lists in address book window

	* src/ab-window.c (balsa_ab_window_init): use GtkWidget's
	hexpand and vexpand functions to properly expand the
	address lists in the address book window when the dialogue is
	enlarged.

2017-11-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not crash if no spell-checker dictionaries are found

	* src/sendmsg-window.c (create_text_area): do not set up
	spell checker if no dictionary is found;
	(create_lang_menu): return value is now the current locale;
	first check whether any dictionaries can be found, and return
	NULL if none;
	(set_locale): check whether spell-checking is disabled;
	(sendmsg_window_new): set up language menu early, so that we can
	find out whether any dictionaries are found.

2017-11-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/toolbar-prefs.c (tp_store_set): map the pixmap id.

2017-11-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some icon issues

	* images/meson.build: remove pointless comment.
	* meson.build: install desktop icon.

2017-11-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Install appstream metadata to non-deprecated location

	Fixes bgo 790076, thanks to Jeremy Bicha
	<URL:https://bugzilla.gnome.org/show_bug.cgi?id=790076>

	* Makefile.am: install balsa.appdata.xml in $(datarootdir)/metainfo.
	* meson.build: ditto.

2017-11-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Old glib-genmarshal has no --output option

	Thanks to Jack for the report